# scte35dump

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
src/: cli.rs  main.rs  mpegts.rs  net.rs  tokio.rs
tests/: cli_tests.rs
tests/cmd/: base64-section.toml  hex-section.toml
