[package]
name = "scte35dump"
version = "0.1.6"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
description = "Dump SCTE-35 data from a Transport Stream contained within a file or RTP network stream"
repository = "https://github.com/m2amedia/scte35dump"
categories = [ "multimedia::video", "command-line-utilities" ]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
hexdump = "0.1.0"
mpeg2ts-reader = "0.13"
rtp-rs = "0.5"
bitreader = "0.3"
net2 = "0.2"
clap = "2.32"
hex = "0.3"
base64 = "0.10"
scte35-reader = "0.11"
smpte2022-1-fec = "0.2"
mio = "0.6"
env_logger = "0.6"

[profile.release]
# for profiling,
#debug = true
