[package]
name = "scte35dump"
version = "0.1.6"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
description = "Dump SCTE-35 data from a Transport Stream contained within a file or RTP network stream"
repository = "https://github.com/m2amedia/scte35dump"
categories = [ "multimedia::video", "command-line-utilities" ]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
mpeg2ts-reader = "0.15"
rtp-rs = "0.6"
net2 = "0.2"
clap = "4.5"
hex = "0.4"
base64 = "0.21"
scte35-reader = "0.14"
smpte2022-1-fec = "0.3"
mio = { version = "0.8", features = ["os-poll", "net"] }
env_logger = "0.10"

[profile.release]
# for profiling,
#debug = true
